# galton_board

./: .gitignore  CMakeLists.txt  README.md  board.cpp  iopegs.cpp  main.cpp  pegs.txt
src/: board.cpp  board.hpp  board_test.cpp  constants.hpp  grad_descent.cpp  iopegs.cpp  iopegs.hpp  main.cpp
tests/: board_test.cpp  test1.txt  test2.txt  test3.txt
